--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.10.1
 
+  http: ^0.13.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
